--- a/package.json
+++ b/package.json
@@ -1,19 +1,7 @@
 {
-  "name": "proxy-server",
-  "version": "1.0.0",
-  "description": "A simple proxy server for API requests",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^3.3.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
