--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
-  "type": "module",
+  "name": "proxy-server",
+  "version": "1.0.0",
+  "description": "A simple proxy server for API requests",
+  "main": "server.js",
+  "type": "module", // <-- Add this line
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^3.3.1"
-  }
+    "node-fetch": "^3.3.1",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
